--- a/src/main/resources/static/web/style/style.css
+++ b/src/main/resources/static/web/style/style.css
@@ -11,11 +11,50 @@
     text-align: center;
     vertical-align: bottom;
 }
-#row0 .border, #row1 .border, #row2 .border, #row3 .border, #row4 .border, #row5 .border, #row6 .border, #row7 .border, #row8 .border, #row9 .border {
-    border-bottom: 1px;
+/*#rowShip0 .border, #row1 .border, #row2 .border, #row3 .border, #row4 .border, #row5 .border, #row6 .border, #row7 .border, #row8 .border, #row9 .border {*/
+    /*border-bottom: 0px;*/
+/*}*/
+
+
+#gridSalvoTable{
+    margin: 10px;
+    margin-left: 40px;
+    display: inline-block;
 }
 
+#gridShipTable {
+    margin: 10px;
+    display: inline-block;
+}
 
+.salvoOpponent {
+    border-radius: 15px;
+    background-color: rosybrown;
+    width:100%;
+    height: 100%;
+    position: absolute;
+    left: 0;
+    top: 0;
+    display:inline-block;
+    height:100%;
+}
+td {
+    position:relative
+}
+
+.salvoPlayer {
+    border-radius: 15px;
+    background-color: darkred;
+    width:100%;
+    height: 100%;
+    position: absolute;
+    left: 0;
+    top: 0;
+}
+
+.text {
+    line-height: 2;
+}
 
 /*#row1 div:first-child {*/
     /*border-top: 1px;*/
